--- a/.config/.config
+++ b/.config/.config
@@ -1,2 +1,2 @@
-ln -s ../karabiner.json ~/.config
-ln -s ../EN-DE.keylayout ~/Library/Keyboard\ Layouts/
+ln -s karabiner.json ~/.config/karabiner/
+ln -s EN-DE.keylayout ~/Library/Keyboard\ Layouts/
