link files instead of copying them

--- a/.appConfig/.config
+++ b/.appConfig/.config
@@ -1,2 +1,4 @@
+# create folder if it does not exist
+mkdir -p ~/.config/karabiner/
 ln -s karabiner.json ~/.config/karabiner/
 ln -s EN-DE.keylayout ~/Library/Keyboard\ Layouts/
