--- a/.appConfig/.config
+++ b/.appConfig/.config
@@ -1,4 +1,6 @@
 # create folder if it does not exist
 mkdir -p ~/.config/karabiner/
 ln -s karabiner.json ~/.config/karabiner/
-ln -s EN-DE.keylayout ~/Library/Keyboard\ Layouts/
+
+# copy file to bypass forbidden linking
+cp EN-DE.keylayout ~/Library/Keyboard\ Layouts/
