--- a/.gitconfig
+++ b/.gitconfig
@@ -181,3 +181,7 @@
 [init]
 
 	defaultBranch = main
+[user]
+	name = Ben Meyer-Meisel
+	email = 59774249+memben@users.noreply.github.com
+	signingkey = C5386F80
