fixed setup bugs

--- a/.appConfig/.config
+++ b/.appConfig/.config
@@ -1,6 +1,6 @@
 # create folder if it does not exist
 mkdir -p ~/.config/karabiner/
-ln -s karabiner.json ~/.config/karabiner/
+cp karabiner.json ~/.config/karabiner/
 
 # copy file to bypass forbidden linking
 cp EN-DE.keylayout ~/Library/Keyboard\ Layouts/
